--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
+    },
+    "require-dev": {
         "mgargano/simplehtmldom":"dev-master"
     },
     "autoload": {
