--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["rotoworld", "fantasy news", "fantasy sports news"],
     "homepage" : "http://matgargano.com",
     "type": "library",
-    "license": "GPL",
+    "license": "GPL-3.0+",
     "authors": [
         {
             "name": "Mat Gargano",
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=5.3.0"
     },
     "require-dev": {
         "mgargano/simplehtmldom":"dev-master"
