--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
-    },
-    "require": {
+        "php": ">=5.3.0",
         "mgargano/simplehtmldom":"dev-master"
     },    
     "autoload": {
