--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "mgargano/simplehtmldom":"dev-master"
+        "php": ">=5.3.0"
+    },    
+    "require-dev": {
+        "amstaff/simplehtmldom" : "dev-master"
     },    
     "autoload": {
         "psr-0": {
