--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
-    },    
-    "require-dev": {
-        "amstaff/simplehtmldom" : "dev-master"
+        "php": ">=5.3.0",
+        "amstaff/simplehtmldom" : "*"
     },    
     "autoload": {
         "psr-0": {
@@ -24,6 +22,8 @@
         "files": [
             "src/Rotoworld.php"
         ]
-    }
+    },
+    "minimum-stability": "dev"
+
     
 }
