--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
         "php": ">=5.3.0"
     },    
     "require-dev": {
-        "amstaff/simplehtmldom" : "dev-master"
+        "mgargano/simplehtmldom" : "~1.5"
     },
-    "minimum-stability" : "dev",
     "autoload": {
         "psr-0": {
             "Rotoworld": "src/"
