--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
-    },    
-    "require-dev": {
+        "php": ">=5.3.0",
         "mgargano/simplehtmldom" : "~1.5"
     },
     "autoload": {
